[project]
name = "mcp-weather-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "fastapi-standalone-docs>=0.2.0",
    "httpx>=0.27.0",
    "mcp>=1.0.0",
    "openai>=2.32.0",
    "uvicorn>=0.44.0",
]

[[tool.uv.index]]
url = "${UV_INDEX_URL}"
default = true
